--- a/feedback.html
+++ b/feedback.html
@@ -11,7 +11,32 @@
 
 <body>
 
-<div class = "header">
+<nav class="nav_header">
+
+<div class="nav_div">
+<div class="nav_logo">
+<a href="index.html"><img src="./media/JJN_Logo.png" width="130px" height="130px"/></a>
+<h1>Jai Jawan News</h1>
+<p>- The Peacekeeping Reflections</p>
+</div>
+<div class="nav_home">
+<a href="index.html"><img src="./media/home copy.png" width="75px" height="75px"/></a>
+<p>Home Page</p>
+</div>
+<div class="nav_news">
+<a href="news.html"><img src="./media/read.png" width="75px" height="75px"/></a>
+<p>Read News</p>
+</div>
+<ul>
+<li><a href="aboutUs.html">About Us</a></li>
+<li><a href="feedback.html">Write To Us</a></li>
+</ul>
+    
+</div>
+    
+</nav>
+
+<!-- <div class = "header">
 
 <a href="index.html"><img src="./media/JJN_Logo.png" width="130px" height="130px"/></a>
 <h1>Jai Jawan News</h1>
@@ -31,7 +56,7 @@
 <a href="feedback.html">Write To Us</a>
 </div>
 
-</div>
+</div> -->
 
 <div class="contactContainer">
 <form action="https://api.web3forms.com/submit" method="POST" class="contactLeft">
