--- a/index.html
+++ b/index.html
@@ -3,15 +3,40 @@
 
 <head>
 <meta charset="utf-8"/>
-<title>Jai Jawan News: Homepage</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jai Jawan News: Homepage</title>
 <link rel="icon" href="./media/JJN_Logo.png" type="image/x-icon">
 <link rel = "stylesheet" type = "text/css" href = "style.css"/>
 </head>
 
 <body>
 
-<div class = "header">
+<nav class="nav_header">
+
+<div class="nav_div">
+<div class="nav_logo">
+<a href="index.html"><img src="./media/JJN_Logo.png" width="130px" height="130px"/></a>
+<h1>Jai Jawan News</h1>
+<p>- The Peacekeeping Reflections</p>
+</div>
+<div class="nav_home">
+<a href="index.html"><img src="./media/home copy.png" width="75px" height="75px"/></a>
+<p>Home Page</p>
+</div>
+<div class="nav_news">
+<a href="news.html"><img src="./media/read.png" width="75px" height="75px"/></a>
+<p>Read News</p>
+</div>
+<ul>
+<li><a href="aboutUs.html">About Us</a></li>
+<li><a href="feedback.html">Write To Us</a></li>
+</ul>
+
+</div>
+
+</nav>
+
+<!-- <div class = "header">
 
 <a href="index.html"><img src="./media/JJN_Logo.png" width="130px" height="130px"/></a>
 <h1>Jai Jawan News</h1>
@@ -31,14 +56,21 @@
 <a href="feedback.html">Write To Us</a>
 </div>
 
-</div>
+</div> -->
 
 <div class="featureDisplay">
 
 <div class="featureBlock">
 <h3>Featured Article:
-<a href="news1.html" style="color: yellow;">War & Peace</a>
+<a href="news1.html" style="color: yellow;">War & Peace</a> &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+More from JJN:
 </h3>
+<div class="bloggerLogo">
+<a href="https://jaijawannews.blogspot.com/">
+<img src="./media/blogger.png" width="100px" height="100px"/>
+</a>
+</div>
 </div>
 <div class="featureNews">
 <div class="containerHome">
