--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <div class="featureBlock">
 <h3>Featured Article:
-<a href="news1.html" style="color: yellow;">War & Peace</a> &nbsp;&nbsp;&nbsp;
+<a href="news1.html" style="color: #a3cae9;">War & Peace</a> &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 More from JJN:
 </h3>
